--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -6,9 +6,8 @@
         android:shortcutId="queue"
         android:shortcutShortLabel="@string/queue_label">
         <intent
-            android:action="android.intent.action.VIEW"
-            android:targetClass="de.danoeh.antennapod.activity.MainActivity"
-            android:targetPackage="de.danoeh.antennapod">
+            android:action="de.danoeh.antennapod.intents.MAIN_ACTIVITY">
+            <category android:name="android.intent.category.DEFAULT"/>
             <extra
                 android:name="fragment_tag"
                 android:value="QueueFragment" />
@@ -21,9 +20,8 @@
         android:shortcutId="episodes"
         android:shortcutShortLabel="@string/episodes_label">
         <intent
-            android:action="android.intent.action.VIEW"
-            android:targetClass="de.danoeh.antennapod.activity.MainActivity"
-            android:targetPackage="de.danoeh.antennapod">
+            android:action="de.danoeh.antennapod.intents.MAIN_ACTIVITY">
+            <category android:name="android.intent.category.DEFAULT"/>
             <extra
                 android:name="fragment_tag"
                 android:value="EpisodesFragment" />
@@ -36,9 +34,8 @@
         android:shortcutId="subscriptions"
         android:shortcutShortLabel="@string/subscriptions_label">
         <intent
-            android:action="android.intent.action.VIEW"
-            android:targetClass="de.danoeh.antennapod.activity.MainActivity"
-            android:targetPackage="de.danoeh.antennapod">
+            android:action="de.danoeh.antennapod.intents.MAIN_ACTIVITY">
+            <category android:name="android.intent.category.DEFAULT"/>
             <extra
                 android:name="fragment_tag"
                 android:value="SubscriptionFragment" />
@@ -51,9 +48,8 @@
         android:shortcutId="refresh"
         android:shortcutShortLabel="@string/refresh_label">
         <intent
-            android:action="android.intent.action.VIEW"
-            android:targetClass="de.danoeh.antennapod.activity.MainActivity"
-            android:targetPackage="de.danoeh.antennapod">
+            android:action="de.danoeh.antennapod.intents.MAIN_ACTIVITY">
+            <category android:name="android.intent.category.DEFAULT"/>
             <extra
                 android:name="refresh_on_start"
                 android:value="true" />
