Improve bug report screen (#8025)

--- a/ui/preferences/src/main/res/xml/preferences.xml
+++ b/ui/preferences/src/main/res/xml/preferences.xml
@@ -63,7 +63,7 @@
             android:icon="@drawable/ic_contribute" />
         <Preference
             android:key="prefSendBugReport"
-            android:title="@string/bug_report_title"
+            android:title="@string/report_bug_title"
             android:icon="@drawable/ic_bug" />
         <Preference
             android:key="prefAbout"
