--- a/app/src/main/res/layout/time_dialog.xml
+++ b/app/src/main/res/layout/time_dialog.xml
@@ -60,7 +60,8 @@
                 android:id="@+id/setSleeptimerButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/set_sleeptimer_label" />
+                android:text="@string/set_sleeptimer_label"
+                style="@style/Widget.Material3.Button" />
 
         </LinearLayout>
 
@@ -80,12 +81,6 @@
                 android:gravity="center"
                 android:textSize="32sp"
                 android:textColor="?android:attr/textColorPrimary" />
-
-            <Button
-                android:id="@+id/disableSleeptimerButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/disable_sleeptimer_label" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -131,6 +126,13 @@
                     tools:text="+20 min" />
 
             </LinearLayout>
+
+            <Button
+                android:id="@+id/disableSleeptimerButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/disable_sleeptimer_label"
+                style="@style/Widget.Material3.Button" />
 
         </LinearLayout>
 
