--- a/app/src/main/res/layout/download_log_details_dialog.xml
+++ b/app/src/main/res/layout/download_log_details_dialog.xml
@@ -19,7 +19,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1">
