Implements: Choosing a data folder should ask for moving existing data (#149)

--- a/ui/preferences/src/main/res/layout/choose_data_folder_dialog.xml
+++ b/ui/preferences/src/main/res/layout/choose_data_folder_dialog.xml
@@ -5,6 +5,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <CheckBox
+        android:id="@+id/checkbox_move_files"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="@string/move_existing_files"
+        android:checked="true" />
+
+    <CheckBox
+        android:id="@+id/checkbox_force_move"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/force_move_insufficient_space"
+        android:checked="false" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
