--- a/app/src/main/res/layout/videoplayer_activity.xml
+++ b/app/src/main/res/layout/videoplayer_activity.xml
@@ -145,7 +145,7 @@
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
-            <SeekBar
+            <de.danoeh.antennapod.ui.screen.playback.video.GestureAwareSeekBar
                 android:id="@+id/sbPosition"
                 android:layout_width="0px"
                 android:layout_height="wrap_content"
