Add default sort for episode list (#7972)

--- a/ui/preferences/src/main/res/xml/preferences_user_interface.xml
+++ b/ui/preferences/src/main/res/xml/preferences_user_interface.xml
@@ -79,6 +79,10 @@
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/episode_lists">
         <Preference
+                android:key="prefGlobalDefaultSortedOrder"
+                android:title="@string/pref_global_default_episode_list_sort_order_title"
+                android:summary="@string/pref_global_default_episode_list_sort_order_sum" />
+        <Preference
                 android:key="prefSwipe"
                 android:summary="@string/swipeactions_summary"
                 android:title="@string/swipeactions_label"/>
