--- a/app/src/main/res/menu/opml_selection_options.xml
+++ b/app/src/main/res/menu/opml_selection_options.xml
@@ -4,16 +4,14 @@
 
     <item
         android:id="@id/select_all_item"
-        android:icon="@drawable/ic_select_all"
         android:title="@string/select_all_label"
-        custom:showAsAction="ifRoom">
+        custom:showAsAction="never">
     </item>
 
     <item
         android:id="@id/deselect_all_item"
-        android:icon="@drawable/ic_select_none"
         android:title="@string/deselect_all_label"
-        custom:showAsAction="ifRoom">
+        custom:showAsAction="never">
     </item>
 
 </menu>
