--- a/app/src/main/res/layout/fragment_subscriptions.xml
+++ b/app/src/main/res/layout/fragment_subscriptions.xml
@@ -47,16 +47,13 @@
                     android:minHeight="1dp"
                     app:layout_collapseMode="pin">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/tags_recycler"
+                    <Spinner
+                        android:id="@+id/tags_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:clipToPadding="false"
-                        android:visibility="visible"
-                        tools:orientation="horizontal"
-                        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/item_tag_chip" />
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginVertical="8dp"
+                        android:visibility="visible" />
 
                     <TextView
                         android:id="@+id/feeds_filtered_message"
