Add 'restore from archive' to select menu

--- a/app/src/main/res/menu/nav_feed_action_speeddial.xml
+++ b/app/src/main/res/menu/nav_feed_action_speeddial.xml
@@ -11,6 +11,11 @@
         android:title="@string/remove_archive_feed_label"
         android:icon="@drawable/ic_delete"/>
     <item
+        android:id="@+id/remove_restore_feed"
+        android:menuCategory="container"
+        android:title="@string/remove_restore_feed_label"
+        android:icon="@drawable/ic_delete"/>
+    <item
         android:id="@+id/keep_updated"
         android:menuCategory="container"
         android:title="@string/keep_updated"
