--- a/app/src/main/res/menu/nav_feed_context.xml
+++ b/app/src/main/res/menu/nav_feed_context.xml
@@ -22,6 +22,11 @@
         android:title="@string/remove_archive_feed_label" />
 
     <item
+        android:id="@+id/remove_restore_feed"
+        android:menuCategory="container"
+        android:title="@string/remove_restore_feed_label" />
+
+    <item
         android:id="@+id/share_feed"
         android:menuCategory="container"
         android:title="@string/share_label" />
