--- a/app/src/main/res/layout/remove_feed_dialog.xml
+++ b/app/src/main/res/layout/remove_feed_dialog.xml
@@ -99,6 +99,16 @@
                 android:text="@string/archive_feed_label_verb"
                 style="@style/Widget.Material3.Button" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/restoreButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingHorizontal="8dp"
+                android:text="@string/restore_archive_label"
+                android:visibility="gone"
+                style="@style/Widget.Material3.Button" />
+
         </LinearLayout>
 
     </LinearLayout>
