Fix bottom navigation box not ticked by default

--- a/ui/preferences/src/main/res/xml/preferences_user_interface.xml
+++ b/ui/preferences/src/main/res/xml/preferences_user_interface.xml
@@ -66,6 +66,7 @@
         <SwitchPreferenceCompat
                 android:title="@string/bottom_navigation"
                 android:summary="@string/bottom_navigation_summary"
+                android:defaultValue="true"
                 android:key="prefBottomNavigation" />
         <Preference
                 android:key="prefHiddenDrawerItems"
