Add share to feed multi-select menu

--- a/app/src/main/res/menu/nav_feed_action_speeddial.xml
+++ b/app/src/main/res/menu/nav_feed_action_speeddial.xml
@@ -5,6 +5,13 @@
         android:menuCategory="container"
         android:title="@string/edit_tags"
         android:icon="@drawable/ic_tag"/>
+
+    <item
+        android:id="@+id/share_feed"
+        android:menuCategory="container"
+        android:title="@string/share_label"
+        android:icon="@drawable/ic_share"/>
+
     <item
         android:id="@+id/remove_archive_feed"
         android:menuCategory="container"
