Fix Display podcast title on card, Image Loading & Cover Management improvements (#6856)

--- a/app/src/main/res/layout/external_player_fragment.xml
+++ b/app/src/main/res/layout/external_player_fragment.xml
@@ -17,7 +17,7 @@
 
         <ImageView
             android:id="@+id/imgvCover"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/external_player_height"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:cropToPadding="true"
