Directly enter multi-select when long-pressing subscriptions

--- a/app/src/main/res/menu/nav_feed_action_speeddial.xml
+++ b/app/src/main/res/menu/nav_feed_action_speeddial.xml
@@ -13,6 +13,12 @@
         android:icon="@drawable/ic_share"/>
 
     <item
+        android:id="@+id/remove_all_inbox_item"
+        android:menuCategory="container"
+        android:title="@string/remove_all_inbox_label"
+        android:icon="@drawable/ic_check"/>
+
+    <item
         android:id="@+id/remove_archive_feed"
         android:menuCategory="container"
         android:title="@string/remove_archive_feed_label"
